force-app/main/default/objects/cgcloud__View__c/cgcloud__View__c.object-meta.xml
<CustomObject>
    <description>This object stores the filter criteria for trade calendar.</description>
    <label>View</label>
    <nameField>
        <displayFormat>VW-{00000000}</displayFormat>
        <label>View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>