force-app/main/default/objects/cgcloud__View__c/fields/cgcloud__Current_View__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Current_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current View</label>
    <type>Checkbox</type>
</CustomField>