force-app/main/default/objects/cgcloud__View__c/fields/cgcloud__Promotion_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Template</label>
    <referenceTo>cgcloud__Promotion_Template__c</referenceTo>
    <relationshipLabel>Views</relationshipLabel>
    <relationshipName>Views</relationshipName>
    <type>Lookup</type>
</CustomField>