force-app/main/default/objects/cgcloud__View__c/fields/cgcloud__User__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Views</relationshipName>
    <type>Lookup</type>
</CustomField>