force-app/main/default/objects/cgcloud__View__c/fields/cgcloud__View_Definition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__View_Definition__c</fullName>
    <label>View Definition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>